# emoji-search

./: .gitignore  README.md  astro.config.mjs  components.json  lighthouserc.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest-setup.ts  vitest.bench.config.ts  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc
.github/workflows/: site-health.yml
apps/: README.md
apps/desktop-ui/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/docs/: AGENTS.md  README.md  astro.config.mjs  package.json  wrangler.jsonc
apps/ext/: CHROMEWEBSTORE.md  README.md  package.json  pnpm-lock.yaml  wxt.config.ts
apps/mac-appkit/: Package.swift  README.md
apps/mac-electron/: README.md  package.json  pnpm-lock.yaml
apps/mac-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/mac-tauri/src-tauri/capabilities/: default.json
apps/mac-tauri/src-tauri/icons/: icon.icns
apps/mac-tauri/src-tauri/src/: lib.rs  main.rs
docs/: astro-hf-cloudflare-workers.md  bulletproof-react.md  vitest-browser-mode-github-actions.md
public/: _headers  robots.txt
scripts/: build-multilingual-autoresearch-seed.ts  build-multilingual-drafts-from-pages.ts  build-multilingual-eval-targets.ts  build-multilingual-experiment-queries.ts  build-sqlite-db.ts  embeddinggemma_similarity.py  generate-multilingual-drafts.ts  mirror-hf-repo.ts  post-deploy-check.mjs  run-emoji-experiments.ts  run-site-audits.mjs  seed-emoji.ts
src/: constants.ts  content.config.ts  env.ts  worker.ts
vitest-example/: MemorySoak.test.tsx  transformersBenchmark.bench.ts
(+213 files in other folders)
