[package]
name = "fetchmoji-tauri"
version = "0.1.0"
description = "FetchMoji Tauri prototype"
authors = ["FetchMoji"]
edition = "2021"

[lib]
name = "fetchmoji_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = { version = "3", default-features = false }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
